--- a/header.html
+++ b/header.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-   
+    <header>
+        <div class="logo">
+            <img src="logo_campus_transparent.PNG.png" alt="">
+        </div>
+        <div class="burger-bar" id="burger">
+            <div class="first-line"></div>
+            <div class="second-line"></div>
+            <div class="third-line"></div>
+        </div>
+    </header>
     <script src="./assets/js/dist/scripts.min.js"></script>
 </body>
 
