add transition menu

--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
         <ul class="first-menu">
             <li><a href="#">Accueil</a></li>
             <li>
-                <a href="#">Portfolio</a>
+                <a  value="Portfolio" selected href="#">Portfolio</a>
                 <ul class="second-menu">
                     <li><a href="#">Web Devs</a></li>
                     <li><a href="#">Web Design</a></li>
