add img and style of index NOT ENDING

--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <!-- INSERT HERE LIBRARYS -->
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="logo_campus_transparent.PNG.png" alt="" />
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
+        </header>
+        <div class="img-header">
+            <h2>Bienvenue</h2>
+        </div>
+        <h1 class="title">Portfolio</h1>
+        <section class="portfolio">
+            <article id="dev" class="card">
+                <h2>Web Devs</h2>
+            </article>
+            <article id="design" class="card">
+                <h2>Web Design</h2>
+            </article>
+            <article id="cpw" class="card">
+                <h2>Chef de Projet WebMarketing</h2>
+            </article>
+            <article id="graph" class="card">
+                <h2>Graphistes</h2>
+            </article>
+        </section>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="assets/css/dist/style.min.css">
-    <!-- INSERT HERE LIBRARYS -->
-</head>
-
-<body>
-   
-    <script src="./assets/js/dist/scripts.min.js"></script>
-</body>
-
+        <script src="./assets/js/dist/scripts.min.js"></script>
+    </body>
 </html>
