--- a/footer.html
+++ b/footer.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <div id="main-container">
-        <main></main>
-    </div>
+    <main>
+
+    </main>
     <footer>
 
     </footer>
