add media queries navbar

--- a/header.html
+++ b/header.html
@@ -11,31 +11,31 @@
 </head>
 
 <body>
-    <div class="main-header">
-        <div class="logo">
-            <img src="logo_campus_transparent.PNG.png" alt="">
+        <div class="main-header">
+            <div class="logo">
+                <img src="logo_campus_transparent.PNG.png" alt="">
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
         </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
+        <div class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="#">Accueil</a></li>
+                <li id="portfolio">
+                    <a href="#">Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li><a href="#">Web Devs</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Chef Projet Marketing</a></li>
+                        <li><a href="#">Graphiste</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
-    </div>
-    <div class="main-menu" id="main-menu">
-        <ul class="first-menu">
-            <li><a href="#">Accueil</a></li>
-            <li>
-                <a  value="Portfolio" selected href="#">Portfolio</a>
-                <ul class="second-menu">
-                    <li><a href="#">Web Devs</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Chef Projet Marketing</a></li>
-                    <li><a href="#">Graphiste</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
     <script src="./assets/js/dist/scripts.min.js"></script>
 </body>
 
