--- a/project.html
+++ b/project.html
@@ -23,10 +23,10 @@
         <img src="author.jpg" alt="" class="author-photo">
         <div class="author-description">
             <h2>Sam Moustache</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias impedit id est tempore, inventore voluptates reiciendis voluptate alias, beatae ipsa soluta sit quis, assumenda omnis eveniet illum perferendis! Est, amet!
-            </p>
+            <span>Web Developpeuse en formation</span>
+            <span>Durée du projet: 2 semaines et demies</span>
+            <span>A fait un BAC L et une license d'anglais avant de se passionné pour le Web Dev</span>
+            <span>A refondu le site de SPLEN-SUP pour un cours de UX Design/Ergonomie</span>
         </div>
         <h4 id="txt-others">Les autres projets de Sam Moustache :</h4>
         <div class="others-projects">
