finished project.html/.scss page , header + nav element add to header.html

--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet Hackaton</title>
     <link rel="stylesheet" href="assets/css/dist/style.min.css">
-    <!-- INSERT HERE LIBRARYS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -23,14 +23,14 @@
         <img src="author.jpg" alt="" class="author-photo">
         <div class="author-description">
             <h2>Sam Moustache</h2>
-            <span>Web Developpeuse en formation</span>
-            <span>Durée du projet: 2 semaines et demies</span>
-            <span>A fait un BAC L et une license d'anglais avant de se passionné pour le Web Dev</span>
-            <span>A refondu le site de SPLEN-SUP pour un cours de UX Design/Ergonomie</span>
+            <span><i class="fas fa-graduation-cap"></i>Web Developpeuse en formation</span>
+            <span><i class="fas fa-stopwatch"></i>Durée du projet: 2 semaines et demies</span>
+            <span><i class="fas fa-tasks"></i>A fait un BAC L et une license d'anglais avant de se passionné pour le Web Dev</span>
+            <span><i class="fas fa-paint-roller"></i>A refondu le site de SPLEN-SUP pour un cours de UX Design/Ergonomie</span>
         </div>
         <h4 id="txt-others">Les autres projets de Sam Moustache :</h4>
         <div class="others-projects">
-            <img src="card1.jpg" alt="">
+            <img src="stash.jpg" alt="">
         </div>
     </section>
 </body>
