--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-        <div class="main-header">
+        <header class="main-header">
             <div class="logo">
                 <img src="logo_campus_transparent.PNG.png" alt="">
             </div>
@@ -20,8 +20,8 @@
                 <div class="second-line"></div>
                 <div class="third-line"></div>
             </div>
-        </div>
-        <div class="main-menu" id="main-menu">
+        </header>
+        <nav class="main-menu" id="main-menu">
             <ul class="first-menu">
                 <li><a href="#">Accueil</a></li>
                 <li id="portfolio">
@@ -35,7 +35,7 @@
                 </li>
                 <li><a href="#">Contact</a></li>
             </ul>
-        </div>
+        </nav>
     <script src="./assets/js/dist/scripts.min.js"></script>
 </body>
 
