--- a/footer.html
+++ b/footer.html
@@ -13,11 +13,68 @@
 <body>
     <main>
 
+        <!-- NEWSLETTER -->
+
+        <div id="newsletter">
+            <h4 class="title">Newsletter</h4>
+
+            <form action="" class="news-inputs">
+                <label class="news-name">Nom / Prénom :
+                    <input type="text" name="news-name" id="news-name" placeholder="Votre prénom et nom ici ">
+                </label>
+                <label class="news-name-mobile">
+                    <input type="text" name="news-name" id="news-name" placeholder="Nom prénom">
+                </label>
+                <label class="news-mail">E-mail:
+                    <input type="email" name="mail" placeholder="Votre email ici">
+                </label>
+                <label class="news-mail-mobile">
+                    <input type="email" name="mail" placeholder="E-mail:">
+                </label>
+                <label class="check">
+                    <input type="checkbox" name="conditions" id="conds">
+                    <span class="checkmark"></span>
+                    En cochant cette case j'accepte les termes et conditions d'utilisations
+                </label>
+                <label class="check-mobile">
+                    <input type="checkbox" name="conditions" id="conds">
+                    <span class="checkmark"></span>
+                    <span class="check-text">J'accepte les conditions d'utilisations générales d'utilisation du
+                        site</span>
+                </label>
+                <div id="news-btn">S'inscrire</div>
+            </form>
+        </div>
     </main>
+    <!-- FOOTER -->
+
     <footer>
-
+        <div id="footer">
+            <div id="footer-head">
+                <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                <ul id="foot-links">
+                    <li><a href=#>CGU</a></li>
+                    <li><a href=#>Contact</a></li>
+                    <li><a href="#"> Mentions légales </a></li>
+                </ul>
+                <ul>
+                    <li>Campus Du lac Rive Gauche</li>
+                    <li>10 Rue Rene Cassin</li>
+                    <li>CS 31996</li>
+                    <li>33071 Bordeaux Cedex</li>
+                    <li>Telephone: 05 56 79 52 00</li>
+                </ul>
+                <ul class="adress">
+                    <li>Campus du Lac Rive droite</li>
+                    <li>7 bis rue max Linder</li>
+                    <li>BP 194</li>
+                    <li>33504 Libourne Cedex</li>
+                    <li>Telephone: 05 56 79 52 00</li>
+                </ul>
+            </div>
+            <div id="copyright">Copyright © All rights reserved 2021 Team 4</div>
+        </div>
     </footer>
-
     <script src="./assets/js/dist/scripts.min.js"></script>
 </body>
 
