--- a/index.html
+++ b/index.html
@@ -62,9 +62,22 @@
                 </ul>
             </div>
         </div>
-
         <h1 class="title">Derniers Projets</h1>
         <section id="last-project" class="portfolio">
+            <article class="card">
+                <div class="body-card">
+                    <h2>Section</h2>
+                    <h3>Nom Prénom</h3>
+                    <h4>projet</h4>
+                </div>
+            </article>
+            <article class="card">
+                <div class="body-card">
+                    <h2>Section</h2>
+                    <h3>Nom Prénom</h3>
+                    <h4>projet</h4>
+                </div>
+            </article>
             <article class="card">
                 <div class="body-card">
                     <h2>Section</h2>
@@ -107,7 +120,6 @@
                     <h2>Web Design</h2>
                 </div>
             </article>
-
             <article id="cpw" class="card">
                 <div class="body-card">
                     <h2>Chef de Projet WebMarketing</h2>
