add filter on images v1.0

--- a/index.html
+++ b/index.html
@@ -48,21 +48,35 @@
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
                         <img
-                        src="./assets/img/src/bg-header.jpg"
+                        src="./assets/img/src/dev.jpg"
                         alt=""
                         />
                     </li>
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
                         <img
-                        src="./assets/img/src/bg-header.jpg"
+                        src="./assets/img/src/design.jpg"
+                        alt=""
+                        />
+                    </li>
+                    <li class="splide__slide">
+                        <h2>Bienvenue</h2>
+                        <img
+                        src="./assets/img/src/cpw.jpg"
+                        alt=""
+                        />
+                    </li>
+                    <li class="splide__slide">
+                        <h2>Bienvenue</h2>
+                        <img
+                        src="./assets/img/src/graph.jpg"
                         alt=""
                         />
                     </li>
                 </ul>
             </div>
         </div>
-        <h1 class="title">Derniers Projets</h1>
+        <h1 class="title">Derniers Projets des élèves</h1>
         <section id="last-project" class="portfolio">
             <article class="card">
                 <div class="body-card">
