--- a/portfolio-section.html
+++ b/portfolio-section.html
@@ -36,9 +36,8 @@
             </ul>
         </div>
         <div class="img-header">
-            <h2>Web Devs</h2>
+            <h1>Web Devs</h1>
         </div>
-        <h1 class="title">Portfolio</h1>
         <section class="portfolio">
             <article id="project-dev-1" class="card">
                 <div class="body-card">
@@ -58,7 +57,37 @@
                     <h3>Nom prénom</h3>
                 </div>
             </article>
-            <article id="project-dev-3" class="card">
+            <article id="project-dev-4" class="card">
+                <div class="body-card">
+                    <h2>Projet</h2>
+                    <h3>Nom prénom</h3>
+                </div>
+            </article>
+            <article id="project-dev-5" class="card">
+                <div class="body-card">
+                    <h2>Projet</h2>
+                    <h3>Nom prénom</h3>
+                </div>
+            </article>
+            <article id="project-dev-6" class="card">
+                <div class="body-card">
+                    <h2>Projet</h2>
+                    <h3>Nom prénom</h3>
+                </div>
+            </article>
+            <article id="project-dev-7" class="card">
+                <div class="body-card">
+                    <h2>Projet</h2>
+                    <h3>Nom prénom</h3>
+                </div>
+            </article>
+            <article id="project-dev-8" class="card">
+                <div class="body-card">
+                    <h2>Projet</h2>
+                    <h3>Nom prénom</h3>
+                </div>
+            </article>
+            <article id="project-dev-9" class="card">
                 <div class="body-card">
                     <h2>Projet</h2>
                     <h3>Nom prénom</h3>
