--- a/footer.html
+++ b/footer.html
@@ -16,7 +16,7 @@
         <!-- NEWSLETTER -->
 
         <div id="newsletter">
-            <h4 class="title">Newsletter</h4>
+            <h4 class="title-news">Newsletter</h4>
 
             <form action="" class="news-inputs">
                 <label class="news-name">Nom / Prénom :
@@ -51,7 +51,7 @@
     <footer>
         <div id="footer">
             <div id="footer-head">
-                <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
                 <ul id="foot-links">
                     <li><a href=#>CGU</a></li>
                     <li><a href=#>Contact</a></li>
