--- a/index.html
+++ b/index.html
@@ -78,42 +78,42 @@
         </div>
         <h1 class="title">Derniers Projets des élèves</h1>
         <section id="last-project" class="portfolio">
-            <article class="card">
+            <article id="last-project-1" class="card">
                 <div class="body-card">
                     <h2>Section</h2>
                     <h3>Nom Prénom</h3>
                     <h4>projet</h4>
                 </div>
             </article>
-            <article class="card">
+            <article id="last-project-2" class="card">
                 <div class="body-card">
                     <h2>Section</h2>
                     <h3>Nom Prénom</h3>
                     <h4>projet</h4>
                 </div>
             </article>
-            <article class="card">
+            <article id="last-project-3" class="card">
                 <div class="body-card">
                     <h2>Section</h2>
                     <h3>Nom Prénom</h3>
                     <h4>projet</h4>
                 </div>
             </article>
-            <article class="card">
+            <article id="last-project-4" class="card">
                 <div class="body-card">
                     <h2>Section</h2>
                     <h3>Nom Prénom</h3>
                     <h4>projet</h4>
                 </div>
             </article>
-            <article class="card">
+            <article id="last-project-5" class="card">
                 <div class="body-card">
                     <h2>Section</h2>
                     <h3>Nom Prénom</h3>
                     <h4>projet</h4>
                 </div>
             </article>
-            <article class="card">
+            <article id="last-project-6" class="card">
                 <div class="body-card">
                     <h2>Section</h2>
                     <h3>Nom Prénom</h3>
@@ -122,7 +122,7 @@
             </article>
         </section>
         <h1 class="title">Portfolio</h1>
-        <section class="portfolio">
+        <section style="max-width:1200px;"class="portfolio">
             <article id="dev" class="card">
                 <div class="body-card">
                     <h2>Web Devs</h2>
@@ -145,6 +145,66 @@
                 </div>
             </article>
         </section>
+        <div class="main">
+            <div id="newsletter">
+                <h4 class="title">Newsletter</h4>
+
+                <form action="" class="news-inputs">
+                    <label class="news-name">Nom / Prénom :
+                        <input type="text" name="news-name" id="news-name" placeholder="Votre prénom et nom ici ">
+                    </label>
+                    <label class="news-name-mobile">
+                        <input type="text" name="news-name" id="news-name" placeholder="Nom prénom">
+                    </label>
+                    <label class="news-mail">E-mail:
+                        <input type="email" name="mail" placeholder="Votre email ici">
+                    </label>
+                    <label class="news-mail-mobile">
+                        <input type="email" name="mail" placeholder="E-mail:">
+                    </label>
+                    <label class="check">
+                        <input type="checkbox" name="conditions" id="conds">
+                        <span class="checkmark"></span>
+                        En cochant cette case j'accepte les termes et conditions d'utilisations
+                    </label>
+                    <label class="check-mobile">
+                        <input type="checkbox" name="conditions" id="conds">
+                        <span class="checkmark"></span>
+                        <span class="check-text">J'accepte les conditions d'utilisations générales d'utilisation du
+                            site</span>
+                    </label>
+                    <div id="news-btn">S'inscrire</div>
+                </form>
+            </div>
+        </div>
+    <!-- FOOTER -->
+        <footer>
+            <div id="footer">
+                <div id="footer-head">
+                    <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                    <ul id="foot-links">
+                        <li><a href=#>CGU</a></li>
+                        <li><a href=#>Contact</a></li>
+                        <li><a href="#"> Mentions légales </a></li>
+                    </ul>
+                    <ul>
+                        <li>Campus Du lac Rive Gauche</li>
+                        <li>10 Rue Rene Cassin</li>
+                        <li>CS 31996</li>
+                        <li>33071 Bordeaux Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                    <ul class="adress">
+                        <li>Campus du Lac Rive droite</li>
+                        <li>7 bis rue max Linder</li>
+                        <li>BP 194</li>
+                        <li>33504 Libourne Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                </div>
+            </div>
+            <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
         <script src="./assets/js/dist/scripts.min.js"></script>
     </body>
