--- a/portfolio-section.html
+++ b/portfolio-section.html
@@ -98,6 +98,34 @@
             <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
             <p>1/4</p>
         </div>
+        <!-- FOOTER -->
+        <footer>
+            <div id="footer">
+                <div id="footer-head">
+                    <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                    <ul id="foot-links">
+                        <li><a href=#>CGU</a></li>
+                        <li><a href=#>Contact</a></li>
+                        <li><a href="#"> Mentions légales </a></li>
+                    </ul>
+                    <ul>
+                        <li>Campus Du lac Rive Gauche</li>
+                        <li>10 Rue Rene Cassin</li>
+                        <li>CS 31996</li>
+                        <li>33071 Bordeaux Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                    <ul class="adress">
+                        <li>Campus du Lac Rive droite</li>
+                        <li>7 bis rue max Linder</li>
+                        <li>BP 194</li>
+                        <li>33504 Libourne Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                </div>
+            </div>
+            <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
+        </footer>
         <script src="./assets/js/dist/scripts.min.js"></script>
     </body>
 </html>
