add images and footer v2 + pagination dots

--- a/portfolio-section.html
+++ b/portfolio-section.html
@@ -95,8 +95,10 @@
             </article>
         </section>
         <div class="pagination">
-            <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
-            <p>1/4</p>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
         </div>
         <!-- FOOTER -->
         <footer>
