--- a/index.html
+++ b/index.html
@@ -1,57 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
-    <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-    <!-- INSERT HERE LIBRARYS -->
-</head>
-
-<body>
-    <div class="main-header">
-        <div class="logo">
-            <img src="logo_campus_transparent.PNG.png" alt="" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
+        />
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+    </head>
+    <body>
+        <div class="main-header">
+            <div class="logo">
+                <img src="logo_campus_transparent.PNG.png" alt="" />
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
         </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
-        </div>
-    </div>
-    <div class="main-menu" id="main-menu">
-        <ul class="first-menu">
-            <li><a href="#">Accueil</a></li>
-            <li id="portfolio">
-                <a href="#">Portfolio</a>
-                <ul class="second-menu" id="secondary-menu">
-                    <li><a href="#">Web Devs</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Chef Projet Marketing</a></li>
-                    <li><a href="#">Graphiste</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
-    <div class="splide">
-        <div class="splide__track">
-            <ul class="splide__list">
-                <li class="splide__slide">
-                    <h2>Bienvenue</h2>
-                    <img src="./assets/img/src/bg-header.jpg" alt="" />
+        <div class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="#">Accueil</a></li>
+                <li id="portfolio">
+                    <a href="#">Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li><a href="#">Web Devs</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Chef Projet Marketing</a></li>
+                        <li><a href="#">Graphiste</a></li>
+                    </ul>
                 </li>
-                <li class="splide__slide">
-                    <h2>Bienvenue</h2>
-                    <img src="./assets/img/src/bg-header.jpg" alt="" />
-                </li>
-                <li class="splide__slide">
-                    <h2>Bienvenue</h2>
-                    <img src="./assets/img/src/bg-header.jpg" alt="" />
-                </li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
         <div class="splide">
@@ -59,38 +42,23 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
-                        <img
-                            src="./assets/img/src/bg-header.jpg"
-                            alt=""
-                        />
+                        <img src="./assets/img/src/bg-header.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
-                        <img
-                        src="./assets/img/src/dev.jpg"
-                        alt=""
-                        />
+                        <img src="./assets/img/src/dev.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
-                        <img
-                        src="./assets/img/src/design.jpg"
-                        alt=""
-                        />
+                        <img src="./assets/img/src/design.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
-                        <img
-                        src="./assets/img/src/cpw.jpg"
-                        alt=""
-                        />
+                        <img src="./assets/img/src/cpw.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
                         <h2>Bienvenue</h2>
-                        <img
-                        src="./assets/img/src/graph.jpg"
-                        alt=""
-                        />
+                        <img src="./assets/img/src/graph.jpg" alt="" />
                     </li>
                 </ul>
             </div>
@@ -141,13 +109,12 @@
             </article>
         </section>
         <h1 class="title">Portfolio</h1>
-        <section style="max-width:1200px;"class="portfolio">
+        <section style="max-width: 1200px" class="portfolio">
             <article id="dev" class="card">
                 <div class="body-card">
                     <h2>Web Devs</h2>
                 </div>
             </article>
-
             <article id="design" class="card">
                 <div class="body-card">
                     <h2>Web Design</h2>
@@ -167,43 +134,65 @@
         <div class="main">
             <div id="newsletter">
                 <h4 class="title">Newsletter</h4>
-
                 <form action="" class="news-inputs">
-                    <label class="news-name">Nom / Prénom :
-                        <input type="text" name="news-name" id="news-name" placeholder="Votre prénom et nom ici ">
+                    <label class="news-name"
+                        >Nom / Prénom :
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Votre prénom et nom ici "
+                        />
                     </label>
                     <label class="news-name-mobile">
-                        <input type="text" name="news-name" id="news-name" placeholder="Nom prénom">
+                        <input
+                            type="text"
+                            name="news-name"
+                            id="news-name"
+                            placeholder="Nom prénom"
+                        />
                     </label>
-                    <label class="news-mail">E-mail:
-                        <input type="email" name="mail" placeholder="Votre email ici">
+                    <label class="news-mail"
+                        >E-mail:
+                        <input
+                            type="email"
+                            name="mail"
+                            placeholder="Votre email ici"
+                        />
                     </label>
                     <label class="news-mail-mobile">
-                        <input type="email" name="mail" placeholder="E-mail:">
+                        <input type="email" name="mail" placeholder="E-mail:" />
                     </label>
                     <label class="check">
-                        <input type="checkbox" name="conditions" id="conds">
+                        <input type="checkbox" name="conditions" id="conds" />
                         <span class="checkmark"></span>
-                        En cochant cette case j'accepte les termes et conditions d'utilisations
+                        En cochant cette case j'accepte les termes et conditions
+                        d'utilisations
                     </label>
                     <label class="check-mobile">
-                        <input type="checkbox" name="conditions" id="conds">
+                        <input type="checkbox" name="conditions" id="conds" />
                         <span class="checkmark"></span>
-                        <span class="check-text">J'accepte les conditions d'utilisations générales d'utilisation du
-                            site</span>
+                        <span class="check-text"
+                            >J'accepte les conditions d'utilisations générales
+                            d'utilisation du site</span
+                        >
                     </label>
                     <div id="news-btn">S'inscrire</div>
                 </form>
             </div>
         </div>
-    <!-- FOOTER -->
+        <!-- FOOTER -->
         <footer>
             <div id="footer">
                 <div id="footer-head">
-                    <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                    <img
+                        src="./assets/img/logo-white.svg"
+                        alt="logo-campus"
+                        id="campus-log"
+                    />
                     <ul id="foot-links">
-                        <li><a href=#>CGU</a></li>
-                        <li><a href=#>Contact</a></li>
+                        <li><a href="#">CGU</a></li>
+                        <li><a href="#">Contact</a></li>
                         <li><a href="#"> Mentions légales </a></li>
                     </ul>
                     <ul>
@@ -228,4 +217,3 @@
         <script src="./assets/js/dist/scripts.min.js"></script>
     </body>
 </html>
-
