--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="assets/css/dist/style.min.css" />
     </head>
     <body>
-        <div class="main-header">
+        <header class="main-header">
             <div class="logo">
                 <img src="logo_campus_transparent.PNG.png" alt="" />
             </div>
@@ -21,43 +21,43 @@
                 <div class="second-line"></div>
                 <div class="third-line"></div>
             </div>
-        </div>
-        <div class="main-menu" id="main-menu">
+        </header>
+        <nav class="main-menu" id="main-menu">
             <ul class="first-menu">
-                <li><a href="#">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li id="portfolio">
-                    <a href="#">Portfolio</a>
+                    <a>Portfolio</a>
                     <ul class="second-menu" id="secondary-menu">
-                        <li><a href="#">Web Devs</a></li>
-                        <li><a href="#">Web Design</a></li>
-                        <li><a href="#">Chef Projet Marketing</a></li>
-                        <li><a href="#">Graphiste</a></li>
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-design.html">Web Design</a></li>
+                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-        </div>
-        <div class="splide">
+        </nav>
+        <div id="splide-index" class="splide">
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <h2>Bienvenue</h2>
+                        <h2>Bienvenue sur notre accueil, d'ici vous pouvez accéder aux portfolios de toutes les sections web du Campus Du Lac.</h2>
                         <img src="./assets/img/src/bg-header.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
-                        <h2>Bienvenue</h2>
+                        <h2>Web Devs</h2>
                         <img src="./assets/img/src/dev.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
-                        <h2>Bienvenue</h2>
+                        <h2>Web Designer</h2>
                         <img src="./assets/img/src/design.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
-                        <h2>Bienvenue</h2>
+                        <h2>Chef de projet Webmarketing</h2>
                         <img src="./assets/img/src/cpw.jpg" alt="" />
                     </li>
                     <li class="splide__slide">
-                        <h2>Bienvenue</h2>
+                        <h2>Graphistes</h2>
                         <img src="./assets/img/src/graph.jpg" alt="" />
                     </li>
                 </ul>
@@ -67,44 +67,56 @@
         <section id="last-project" class="portfolio">
             <article id="last-project-1" class="card">
                 <div class="body-card">
-                    <h2>Section</h2>
-                    <h3>Nom Prénom</h3>
-                    <h4>projet</h4>
+                    <a href="project.html">
+                        <h2>Section</h2>
+                        <h3>Nom Prénom</h3>
+                        <h4>projet</h4>
+                    </a>
                 </div>
             </article>
             <article id="last-project-2" class="card">
                 <div class="body-card">
-                    <h2>Section</h2>
-                    <h3>Nom Prénom</h3>
-                    <h4>projet</h4>
+                    <a href="project.html">
+                        <h2>Section</h2>
+                        <h3>Nom Prénom</h3>
+                        <h4>projet</h4>
+                    </a>
                 </div>
             </article>
             <article id="last-project-3" class="card">
                 <div class="body-card">
-                    <h2>Section</h2>
-                    <h3>Nom Prénom</h3>
-                    <h4>projet</h4>
+                    <a href="project.html">
+                        <h2>Section</h2>
+                        <h3>Nom Prénom</h3>
+                        <h4>projet</h4>
+                    </a>
                 </div>
             </article>
             <article id="last-project-4" class="card">
                 <div class="body-card">
-                    <h2>Section</h2>
-                    <h3>Nom Prénom</h3>
-                    <h4>projet</h4>
+                    <a href="project.html">
+                        <h2>Section</h2>
+                        <h3>Nom Prénom</h3>
+                        <h4>projet</h4>
+                    </a>
                 </div>
             </article>
             <article id="last-project-5" class="card">
                 <div class="body-card">
-                    <h2>Section</h2>
-                    <h3>Nom Prénom</h3>
-                    <h4>projet</h4>
+                    <a href="project.html">
+                        <h2>Section</h2>
+                        <h3>Nom Prénom</h3>
+                        <h4>projet</h4>
+                    </a>
                 </div>
             </article>
             <article id="last-project-6" class="card">
                 <div class="body-card">
-                    <h2>Section</h2>
-                    <h3>Nom Prénom</h3>
-                    <h4>projet</h4>
+                    <a href="project.html">
+                        <h2>Section</h2>
+                        <h3>Nom Prénom</h3>
+                        <h4>projet</h4>
+                    </a>
                 </div>
             </article>
         </section>
@@ -112,22 +124,30 @@
         <section style="max-width: 1200px" class="portfolio">
             <article id="dev" class="card">
                 <div class="body-card">
+                <a href="portfolio-section-dev.html">
                     <h2>Web Devs</h2>
+                </a>
                 </div>
             </article>
             <article id="design" class="card">
                 <div class="body-card">
-                    <h2>Web Design</h2>
+                    <a href="portfolio-section-design.html">
+                        <h2>Web Design</h2>
+                    </a>
                 </div>
             </article>
             <article id="cpw" class="card">
                 <div class="body-card">
-                    <h2>Chef de Projet WebMarketing</h2>
+                    <a href="portfolio-section-cpw.html">
+                        <h2>Chef de Projet WebMarketing</h2>
+                    </a>
                 </div>
             </article>
             <article id="graph" class="card">
                 <div class="body-card">
-                    <h2>Graphistes</h2>
+                    <a href="portfolio-section-graph.html">
+                        <h2>Graphistes</h2>
+                    </a>
                 </div>
             </article>
         </section>
@@ -191,9 +211,9 @@
                         id="campus-log"
                     />
                     <ul id="foot-links">
-                        <li><a href="#">CGU</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#"> Mentions légales </a></li>
+                        <li><a href="cgu.html">CGU</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="mention.html"> Mentions légales </a></li>
                     </ul>
                     <ul>
                         <li>Campus Du lac Rive Gauche</li>
