--- a/mention.html
+++ b/mention.html
@@ -9,7 +9,7 @@
         <!-- INSERT HERE LIBRARYS -->
     </head>
     <body>
-        <div class="main-header">
+        <header class="main-header">
             <div class="logo">
                 <img src="logo_campus_transparent.PNG.png" alt="" />
             </div>
@@ -18,8 +18,8 @@
                 <div class="second-line"></div>
                 <div class="third-line"></div>
             </div>
-        </div>
-        <div class="main-menu" id="main-menu">
+        </header>
+        <nav class="main-menu" id="main-menu">
             <ul class="first-menu">
                 <li><a href="#">Accueil</a></li>
                 <li id="portfolio">
@@ -33,9 +33,9 @@
                 </li>
                 <li><a href="#">Contact</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="img-header">
-            <h1>Web Devs</h1>
+            <h1>Mentions Légales</h1>
         </div>
         <section id="mention-legal">
             <h2>Mentions l&eacute;gales</h2>
