--- a/portfolio-section.html
+++ b/portfolio-section.html
@@ -10,7 +10,7 @@
         <!-- INSERT HERE LIBRARYS -->
     </head>
     <body>
-        <div class="main-header">
+        <header class="main-header">
             <div class="logo">
                 <img src="logo_campus_transparent.PNG.png" alt="" />
             </div>
@@ -19,22 +19,22 @@
                 <div class="second-line"></div>
                 <div class="third-line"></div>
             </div>
-        </div>
-        <div class="main-menu" id="main-menu">
+        </header>
+        <nav class="main-menu" id="main-menu">
             <ul class="first-menu">
-                <li><a href="#">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li id="portfolio">
-                    <a href="#">Portfolio</a>
+                    <a>Portfolio</a>
                     <ul class="second-menu" id="secondary-menu">
-                        <li><a href="#">Web Devs</a></li>
-                        <li><a href="#">Web Design</a></li>
-                        <li><a href="#">Chef Projet Marketing</a></li>
-                        <li><a href="#">Graphiste</a></li>
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-design.html">Web Design</a></li>
+                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="img-header">
             <h1>Web Devs</h1>
         </div>
@@ -106,9 +106,9 @@
                 <div id="footer-head">
                     <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
                     <ul id="foot-links">
-                        <li><a href=#>CGU</a></li>
-                        <li><a href=#>Contact</a></li>
-                        <li><a href="#"> Mentions légales </a></li>
+                        <li><a href="cgu.html">CGU</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="mention.html"> Mentions légales </a></li>
                     </ul>
                     <ul>
                         <li>Campus Du lac Rive Gauche</li>
