fix footer + header on all pages

--- a/mention.html
+++ b/mention.html
@@ -11,7 +11,7 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="logo_campus_transparent.PNG.png" alt="" />
+                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -103,6 +103,8 @@
             <p><br></p>
             <p>Conform&eacute;ment &agrave; la Loi Informatique et Libert&eacute;s et R&egrave;glement g&eacute;n&eacute;ral sur la protection des donn&eacute;es (RGPD), vous disposez d&rsquo;un droit d&rsquo;acc&egrave;s, de modification, de suppression et d&rsquo;opposition au traitement de vos donn&eacute;es &agrave; caract&egrave;re personnel.</p>
         </section>
+        <div class="main2">
+        </div>    
         <footer>
             <div id="footer">
                 <div id="footer-head">
