--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="logo_campus_transparent.PNG.png" alt="" />
+                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
