--- a/portfolio-section.html
+++ b/portfolio-section.html
@@ -12,7 +12,7 @@
     <body>
         <header class="main-header">
             <div class="logo">
-                <img src="logo_campus_transparent.PNG.png" alt="" />
+                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
             </div>
             <div class="burger-bar" id="burger">
                 <div class="first-line"></div>
@@ -101,6 +101,8 @@
             <span class="dot"></span>
         </div>
         <!-- FOOTER -->
+        <div class="main2">
+        </div>    
         <footer>
             <div id="footer">
                 <div id="footer-head">
