--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 <body>
     <header class="main-header">
         <div class="logo">
-            <img src="logo_campus_transparent.PNG.png" alt="" />
+            <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
         </div>
         <div class="burger-bar" id="burger">
             <div class="first-line"></div>
@@ -102,6 +102,8 @@
             </div>
         </div>
     </section>
+    <div class="main2">
+    </div>
     <footer>
         <div id="footer">
             <div id="footer-head">
