add logo on footer

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div id="footer">
                 <div id="footer-head">
                     <img
-                        src="./assets/img/logo-white.svg"
+                        src="./assets/img/src/logo-white.svg"
                         alt="logo-campus"
                         id="campus-log"
                     />
