--- a/portfolio-section.html
+++ b/portfolio-section.html
@@ -106,7 +106,7 @@
         <footer>
             <div id="footer">
                 <div id="footer-head">
-                    <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
                     <ul id="foot-links">
                         <li><a href="cgu.html">CGU</a></li>
                         <li><a href="contact.html">Contact</a></li>
