--- a/userport.html
+++ b/userport.html
@@ -84,7 +84,6 @@
                     <h2>Nom Projet</h2>
                 </div>
             </article>
-
         </section>
     </div>
     <div class="main2">
@@ -92,7 +91,7 @@
     <footer>
         <div id="footer">
             <div id="footer-head">
-                <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
                 <ul id="foot-links">
                     <li><a href="cgu.html">CGU</a></li>
                     <li><a href="contact.html">Contact</a></li>
