--- a/project.html
+++ b/project.html
@@ -107,7 +107,7 @@
     <footer>
         <div id="footer">
             <div id="footer-head">
-                <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
+                <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
                 <ul id="foot-links">
                     <li><a href=#>CGU</a></li>
                     <li><a href=#>Contact</a></li>
