add link on all pages

--- a/project.html
+++ b/project.html
@@ -48,7 +48,9 @@
                 dolores.</p>
         </div>
         </div>
-        <img src="./assets/img/src/author.jpg" alt="" class="author-photo">
+        <a href="userport.html">
+            <img src="./assets/img/src/author.jpg" alt="" class="author-photo">
+        </a>
         <div class="author-description">
             <h2>Sam Oustache</h2>
             <span><i class="fas fa-graduation-cap"></i>Web Developpeur en formation</span>
