--- a/userport.html
+++ b/userport.html
@@ -56,32 +56,44 @@
         <section class="portfolio" id="sam-portfolio">
             <article id="project-sam-1" class="card">
                 <div class="body-card">
-                    <h2>Nom Projet</h2>
+                    <a href="project.html">
+                        <h2>Nom Projet</h2>
+                    </a>
                 </div>
             </article>
             <article id="project-sam-1" class="card">
                 <div class="body-card">
-                    <h2>Nom Projet</h2>
+                    <a href="project.html">
+                        <h2>Nom Projet</h2>
+                    </a>
                 </div>
             </article>
             <article id="project-sam-1" class="card">
                 <div class="body-card">
-                    <h2>Nom Projet</h2>
+                    <a href="project.html">
+                        <h2>Nom Projet</h2>
+                    </a>
                 </div>
             </article>
             <article id="project-sam-1" class="card">
                 <div class="body-card">
-                    <h2>Nom Projet</h2>
+                    <a href="project.html">
+                        <h2>Nom Projet</h2>
+                    </a>
                 </div>
             </article>
             <article id="project-sam-1" class="card">
                 <div class="body-card">
-                    <h2>Nom Projet</h2>
+                    <a href="project.html">
+                        <h2>Nom Projet</h2>
+                    </a>
                 </div>
             </article>
             <article id="project-sam-1" class="card">
                 <div class="body-card">
-                    <h2>Nom Projet</h2>
+                    <a href="project.html">
+                        <h2>Nom Projet</h2>
+                    </a>
                 </div>
             </article>
         </section>
