--- a/portfolio-section-graph.html
+++ b/portfolio-section-graph.html
@@ -41,56 +41,74 @@
         <section class="portfolio">
             <article id="project-dev-1" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-2" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-3" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-4" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-5" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-6" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-7" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-8" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
             <article id="project-dev-9" class="card">
                 <div class="body-card">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
                 </div>
             </article>
         </section>
