fix bug on section width of tim

--- a/portfolio-section-cpw.html
+++ b/portfolio-section-cpw.html
@@ -111,7 +111,8 @@
                     </a>
                 </div>
             </article>
-        </section>        <div class="pagination">
+        </section>        
+        <div class="pagination">
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
