--- a/userport.html
+++ b/userport.html
@@ -51,8 +51,7 @@
                 recusandae aliquid iusto assumenda ex perspiciatis nulla vero?</p>
         </div>
     </div>
-    <div id=user-projects>
-        <h3 class="project-title">Les projets de Sam Oustache :</h3>
+    <h2 class="title-center">Les projets de Sam Oustache :</h2>
         <section class="portfolio" id="sam-portfolio">
             <article id="project-sam-1" class="card">
                 <div class="body-card">
@@ -97,7 +96,12 @@
                 </div>
             </article>
         </section>
-    </div>
+        <div class="pagination">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
     <div class="main2">
     </div>    
     <footer>
