add connexion button to web display and mobile menu

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="first-menu">
             <li><a href="#">Accueil</a></li>
             <li id="portfolio">
-                <a href="#">Portfolio</a>
+                <a>Portfolio</a>
                 <ul class="second-menu" id="secondary-menu">
                     <li><a href="#">Web Devs</a></li>
                     <li><a href="#">Web Design</a></li>
