connexion link add to index-v2.html/scss

--- a/cgu.html
+++ b/cgu.html
@@ -25,7 +25,7 @@
                 <li id="portfolio">
                     <a>Portfolio</a>
                     <ul class="second-menu" id="secondary-menu">
-                        <li><a href="portfolio-section-web.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
                         <li><a href="portfolio-section-design.html">Web Design</a></li>
                         <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
                         <li><a href="portfolio-section-graph.html">Graphiste</a></li>
