--- a/portfolio-section-graph.html
+++ b/portfolio-section-graph.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Projet Hackaton</title>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
         <link rel="stylesheet" href="assets/css/dist/style.min.css" />
         <!-- INSERT HERE LIBRARYS -->
@@ -39,7 +40,7 @@
             <h1>Graphiste</h1>
         </div>
         <section class="portfolio">
-            <article id="project-dev-1" class="card">
+            <article data-aos="fade-right" data-aos-duration="1000" id="project-dev-1" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -47,7 +48,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-2" class="card">
+            <article data-aos="fade-up" data-aos-duration="1000" id="project-dev-2" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -55,7 +56,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-3" class="card">
+            <article data-aos="fade-left" data-aos-duration="1000" id="project-dev-3" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -63,7 +64,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-4" class="card">
+            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" id="project-dev-4" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -71,7 +72,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-5" class="card">
+            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="500" id="project-dev-5" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -79,7 +80,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-6" class="card">
+            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="600" id="project-dev-6" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -87,7 +88,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-7" class="card">
+            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" id="project-dev-7" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -95,7 +96,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-8" class="card">
+            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="500" id="project-dev-8" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -103,7 +104,7 @@
                     </a>
                 </div>
             </article>
-            <article id="project-dev-9" class="card">
+            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="600" id="project-dev-9" class="card">
                 <div class="body-card">
                     <a href="project.html">
                         <h2>Projet</h2>
@@ -148,6 +149,11 @@
             </div>
             <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="./assets/js/dist/scripts.min.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
