--- a/contact.html
+++ b/contact.html
@@ -1,96 +1,119 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-    <!-- INSERT HERE LIBRARYS -->
-</head>
-<body>
-
-    <!-- MENU -->
-    <header class="main-header">
-        <div class="logo">
-            <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+    </head>
+    <body>
+        <!-- MENU -->
+        <header class="main-header">
+            <div class="logo">
+                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
+        </header>
+        <nav class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="index.html">Accueil</a></li>
+                <li id="portfolio">
+                    <a>Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-design.html">Web Design</a></li>
+                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="img-header" id="img-header">
+            <h1>Contact</h1>
         </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
-        </div>
-    </header>
-    <nav class="main-menu" id="main-menu">
-        <ul class="first-menu">
-            <li><a href="index.html">Accueil</a></li>
-            <li id="portfolio">
-                <a>Portfolio</a>
-                <ul class="second-menu" id="secondary-menu">
-                    <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                    <li><a href="portfolio-section-design.html">Web Design</a></li>
-                    <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                    <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+        <h2 id="contitle">Contact</h2>
+        <!-- MAP -->
+        <div id="contact-info">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2827.3104353462345!2d-0.5765514845907144!3d44.87633107909833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55284f879cb9b9%3A0xd03cd5adf2ce0b8e!2sCampus%20du%20Lac!5e0!3m2!1sfr!2sfr!4v1616020555534!5m2!1sfr!2sfr"
+                style="border:0;" allowfullscreen="" loading="lazy" id=contact-map></iframe>
+            <div id="contact-adress">
+                <ul>
+                    <li>Campus du Lac Rive gauche</li>
+                    <li>10 Rue Rene Cassin</li>
+                    <li>CS31996</li>
+                    <li>33071 Bordeaux Cedex</li>
+                    <li>Telephone:05 56 79 52 00</li>
+                    <li>E-mail: campus@formation-lac.com</li>
                 </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="img-header" id="img-header">
-        <h1>Contact</h1>
-    </div>
-    <h2 id="contitle">Contact</h2>
-    <!-- MAP -->
-    <div id="contact-info">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2827.3104353462345!2d-0.5765514845907144!3d44.87633107909833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55284f879cb9b9%3A0xd03cd5adf2ce0b8e!2sCampus%20du%20Lac!5e0!3m2!1sfr!2sfr!4v1616020555534!5m2!1sfr!2sfr"
-            style="border:0;" allowfullscreen="" loading="lazy" id=contact-map></iframe>
-        <div id="contact-adress">
-            <ul>
-                <li>Campus du Lac Rive gauche</li>
-                <li>10 Rue Rene Cassin</li>
-                <li>CS31996</li>
-                <li>33071 Bordeaux Cedex</li>
-                <li>Telephone:05 56 79 52 00</li>
-                <li>E-mail: campus@formation-lac.com</li>
-            </ul>
-            <ul>
-                <li>Campus du Lac Rive droite</li>
-                <li>7bis rue max Linder</li>
-                <li>BP194</li>
-                <li>33504 Libourne Cedex</li>
-                <li>Telephone:05 56 79 52 00</li>
-                <li>E-mail: campus@formation-lac.com</li>
-            </ul>
+                <ul>
+                    <li>Campus du Lac Rive droite</li>
+                    <li>7bis rue max Linder</li>
+                    <li>BP194</li>
+                    <li>33504 Libourne Cedex</li>
+                    <li>Telephone:05 56 79 52 00</li>
+                    <li>E-mail: campus@formation-lac.com</li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <section id="contact-box">
-        <form action="#" class="contact-form">
-            <h3>Contactez-nous!</h3>
-            <Label for="contact-mail">
-                <input type="email" name="contact-mail" id="contact-mail" placeholder="E-mail">
-            </Label>
-            <label for="contact-name">
-                <input type="text" name="contact-name" id="contact-name" placeholder="Nom prénom">
-            </label>
-            <label for="contact-message">
-                <textarea name="contact-message" id="contact-message" cols="25" rows="10"></textarea>
-            </label>
-            <label class="check" id="contact-check">
-                <input type="checkbox" name="conditions" id="conds">
-                <span class="checkmark" id="contact-checkmark"></span>
-                En cochant cette case j'accepte les termes et
-                conditions d'utilisations
-
-            </label>
-            <label for="contact-btn">
-                <input type="submit" name="contact-btn" id="contact-btn">
-            </label>
-
-        </form>
-    </section>
-    <script src="./assets/js/dist/scripts.min.js"></script>
-</body>
-
+        <section id="contact-box">
+            <form action="#" class="contact-form">
+                <h3>Contactez-nous!</h3>
+                <Label for="contact-mail">
+                    <input type="email" name="contact-mail" id="contact-mail" placeholder="E-mail">
+                </Label>
+                <label for="contact-name">
+                    <input type="text" name="contact-name" id="contact-name" placeholder="Nom prénom">
+                </label>
+                <label for="contact-message">
+                    <textarea name="contact-message" id="contact-message" cols="25" rows="10"></textarea>
+                </label>
+                <label class="check" id="contact-check">
+                    <input type="checkbox" name="conditions" id="conds">
+                    <span class="checkmark" id="contact-checkmark"></span>
+                    En cochant cette case j'accepte les termes et
+                    conditions d'utilisations
+                </label>
+                <label for="contact-btn">
+                    <input type="submit" name="contact-btn" id="contact-btn">
+                </label>
+            </form>
+        </section>
+        <div class="main2">
+        </div>    
+        <footer>
+            <div id="footer">
+                <div id="footer-head">
+                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
+                    <ul id="foot-links">
+                        <li><a href="cgu.html">CGU</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="mention.html"> Mentions légales </a></li>
+                    </ul>
+                    <ul>
+                        <li>Campus Du lac Rive Gauche</li>
+                        <li>10 Rue Rene Cassin</li>
+                        <li>CS 31996</li>
+                        <li>33071 Bordeaux Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                    <ul class="adress">
+                        <li>Campus du Lac Rive droite</li>
+                        <li>7 bis rue max Linder</li>
+                        <li>BP 194</li>
+                        <li>33504 Libourne Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                </div>
+            </div>
+            <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
+        </footer>
+        <script src="./assets/js/dist/scripts.min.js"></script>
+    </body>
 </html>
