--- a/userport.html
+++ b/userport.html
@@ -1,137 +1,140 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-    <!-- INSERT HERE LIBRARYS -->
-</head>
-<body>
-    <header class="main-header">
-        <div class="logo">
-            <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <!-- INSERT HERE LIBRARYS -->
+    </head>
+    <body>
+        <header class="main-header">
+            <div class="logo">
+                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
+        </header>
+        <nav class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="index.html">Accueil</a></li>
+                <li id="portfolio">
+                    <a>Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-design.html">Web Design</a></li>
+                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="img-header">
+            <h1>Sam Oustache</h1>
         </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
-        </div>
-    </header>
-    <nav class="main-menu" id="main-menu">
-        <ul class="first-menu">
-            <li><a href="index.html">Accueil</a></li>
-            <li id="portfolio">
-                <a>Portfolio</a>
-                <ul class="second-menu" id="secondary-menu">
-                    <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                    <li><a href="portfolio-section-design.html">Web Design</a></li>
-                    <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                    <li><a href="portfolio-section-graph.html">Graphiste</a></li>
-                </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="img-header">
-        <h1>Sam Oustache</h1>
-    </div>
-    <div class="user-infos">
-        <div id="user-port-img">
-            <img src="./assets/img/src/author.jpg" alt="Sam Oustache">
-        </div>
-        <h2 class="user-title">Sam Oustache</h2>
-
-        <div class="user-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus quis minus ea consequatur possimus
-                laboriosam autem nihil laudantium omnis, magnam inventore temporibus rem at. Odit pariatur sit earum rem
-                repellat ut quod distinctio, accusamus laudantium, libero inventore. Consectetur veniam velit suscipit
-                recusandae aliquid iusto assumenda ex perspiciatis nulla vero?</p>
-        </div>
-    </div>
-    <h2 class="title-center">Les projets de Sam Oustache :</h2>
-        <section class="portfolio" id="sam-portfolio">
-            <article id="project-sam-1" class="card">
-                <div class="body-card">
-                    <a href="project.html">
-                        <h2>Nom Projet</h2>
-                    </a>
-                </div>
-            </article>
-            <article id="project-sam-2" class="card">
-                <div class="body-card">
-                    <a href="project.html">
-                        <h2>Nom Projet</h2>
-                    </a>
-                </div>
-            </article>
-            <article id="project-sam-3" class="card">
-                <div class="body-card">
-                    <a href="project.html">
-                        <h2>Nom Projet</h2>
-                    </a>
-                </div>
-            </article>
-            <article id="project-sam-4" class="card">
-                <div class="body-card">
-                    <a href="project.html">
-                        <h2>Nom Projet</h2>
-                    </a>
-                </div>
-            </article>
-            <article id="project-sam-5" class="card">
-                <div class="body-card">
-                    <a href="project.html">
-                        <h2>Nom Projet</h2>
-                    </a>
-                </div>
-            </article>
-            <article id="project-sam-6" class="card">
-                <div class="body-card">
-                    <a href="project.html">
-                        <h2>Nom Projet</h2>
-                    </a>
-                </div>
-            </article>
-        </section>
-        <div class="pagination">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-    <div class="main2">
-    </div>    
-    <footer>
-        <div id="footer">
-            <div id="footer-head">
-                <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
-                <ul id="foot-links">
-                    <li><a href="cgu.html">CGU</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="mention.html"> Mentions légales </a></li>
-                </ul>
-                <ul>
-                    <li>Campus Du lac Rive Gauche</li>
-                    <li>10 Rue Rene Cassin</li>
-                    <li>CS 31996</li>
-                    <li>33071 Bordeaux Cedex</li>
-                    <li>Telephone: 05 56 79 52 00</li>
-                </ul>
-                <ul class="adress">
-                    <li>Campus du Lac Rive droite</li>
-                    <li>7 bis rue max Linder</li>
-                    <li>BP 194</li>
-                    <li>33504 Libourne Cedex</li>
-                    <li>Telephone: 05 56 79 52 00</li>
-                </ul>
+        <div class="user-infos">
+            <div id="user-port-img">
+                <img src="./assets/img/src/author.jpg" alt="Sam Oustache">
+            </div>
+            <h2 class="user-title">Sam Oustache</h2>
+            <div class="user-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus quis minus ea consequatur possimus
+                    laboriosam autem nihil laudantium omnis, magnam inventore temporibus rem at. Odit pariatur sit earum rem
+                    repellat ut quod distinctio, accusamus laudantium, libero inventore. Consectetur veniam velit suscipit
+                    recusandae aliquid iusto assumenda ex perspiciatis nulla vero?</p>
             </div>
         </div>
-        <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
-    </footer>
-    <script src="./assets/js/dist/scripts.min.js"></script>
-</body>
-
+        <h2 class="title-center">Les projets de Sam Oustache :</h2>
+            <section class="portfolio" id="sam-portfolio">
+                <article data-aos="fade-right" data-aos-duration="1000" id="project-sam-1" class="card">
+                    <div class="body-card">
+                        <a href="project.html">
+                            <h2>Nom Projet</h2>
+                        </a>
+                    </div>
+                </article>
+                <article data-aos="fade-up" data-aos-duration="1000" id="project-sam-2" class="card">
+                    <div class="body-card">
+                        <a href="project.html">
+                            <h2>Nom Projet</h2>
+                        </a>
+                    </div>
+                </article>
+                <article data-aos="fade-left" data-aos-duration="1000" id="project-sam-3" class="card">
+                    <div class="body-card">
+                        <a href="project.html">
+                            <h2>Nom Projet</h2>
+                        </a>
+                    </div>
+                </article>
+                <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300" id="project-sam-4" class="card">
+                    <div class="body-card">
+                        <a href="project.html">
+                            <h2>Nom Projet</h2>
+                        </a>
+                    </div>
+                </article>
+                <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="400" id="project-sam-5" class="card">
+                    <div class="body-card">
+                        <a href="project.html">
+                            <h2>Nom Projet</h2>
+                        </a>
+                    </div>
+                </article>
+                <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" id="project-sam-6" class="card">
+                    <div class="body-card">
+                        <a href="project.html">
+                            <h2>Nom Projet</h2>
+                        </a>
+                    </div>
+                </article>
+            </section>
+            <div class="pagination">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        <div class="main2">
+        </div>    
+        <footer>
+            <div id="footer">
+                <div id="footer-head">
+                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
+                    <ul id="foot-links">
+                        <li><a href="cgu.html">CGU</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="mention.html"> Mentions légales </a></li>
+                    </ul>
+                    <ul>
+                        <li>Campus Du lac Rive Gauche</li>
+                        <li>10 Rue Rene Cassin</li>
+                        <li>CS 31996</li>
+                        <li>33071 Bordeaux Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                    <ul class="adress">
+                        <li>Campus du Lac Rive droite</li>
+                        <li>7 bis rue max Linder</li>
+                        <li>BP 194</li>
+                        <li>33504 Libourne Cedex</li>
+                        <li>Telephone: 05 56 79 52 00</li>
+                    </ul>
+                </div>
+            </div>
+            <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="./assets/js/dist/scripts.min.js"></script>
+        <script>
+            AOS.init();
+        </script>
+    </body>
 </html>
