add icons on footer

--- a/create-1.html
+++ b/create-1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
     <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
+
 <body>
     <div class="main-header">
         <div class="logo">
@@ -45,12 +48,35 @@
     <footer>
         <div id="footer">
             <div id="footer-head">
-                <img src="./assets/img/logo-white.svg" alt="logo-campus" id="campus-log">
-                <ul id="foot-links">
-                    <li><a href=#>CGU</a></li>
-                    <li><a href=#>Contact</a></li>
-                    <li><a href="#"> Mentions légales </a></li>
+                <div id="campus-logo-mobile">
+                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                </div>
+                <ul class="networks-icons-mobile">
+                    <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
+                    <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
+                    <li><a
+                            href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
+                                class="fab fa-linkedin-in"></i></a></li>
                 </ul>
+
+                <div class="large-links">
+                    <ul class="networks-icons-large">
+                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
+                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
+                        <li><a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
+                                    class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                    <ul id="foot-links">
+                        <li><a href="cgu.html">CGU</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="mention.html"> Mentions légales </a></li>
+                    </ul>
+                </div>
                 <ul>
                     <li>Campus Du lac Rive Gauche</li>
                     <li>10 Rue Rene Cassin</li>
@@ -68,4 +94,5 @@
             </div>
         </div>
 </body>
+
 </html>
