--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet Hackaton</title>
     <link rel="stylesheet" href="assets/css/dist/style.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
     <!-- INSERT HERE LIBRARYS -->
 </head>
 
@@ -51,12 +54,35 @@
     <footer>
         <div id="footer">
             <div id="footer-head">
-                <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
-                <ul id="foot-links">
-                    <li><a href=#>CGU</a></li>
-                    <li><a href=#>Contact</a></li>
-                    <li><a href="#"> Mentions légales </a></li>
+                <div id="campus-logo-mobile">
+                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                </div>
+                <ul class="networks-icons-mobile">
+                    <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
+                    <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
+                    <li><a
+                            href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
+                                class="fab fa-linkedin-in"></i></a></li>
                 </ul>
+
+                <div class="large-links">
+                    <ul class="networks-icons-large">
+                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
+                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
+                        <li><a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
+                                    class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                    <ul id="foot-links">
+                        <li><a href="cgu.html">CGU</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="mention.html"> Mentions légales </a></li>
+                    </ul>
+                </div>
                 <ul>
                     <li>Campus Du lac Rive Gauche</li>
                     <li>10 Rue Rene Cassin</li>
